<resources>
    <string name="app_name">Crypto currency</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="minimum">Minimo</string>
    <string name="maximum">Maximo</string>
    <string name="sTo"> a </string>
    <string name="svolume">Volumen de las últimas 24 horas:</string>
    <string name="shigh">Precio alto en las últimas 24 horas :</string>
    <string name="slast">Último precio negociado:</string>
    <string name="slow">Precio bajo en últimas 24 horas:</string>
    <string name="svwap">Precio promedio ponderado por volumen:</string>
    <string name="sask">Orden de venta más bajo:</string>
    <string name="sbid">Orden de compra más alto:</string>
    <string name="screated">Creado:</string>

    <string name="orderbook">Libro de pedidos:</string>

    <string name="price">Precio:</string>
    <string name="amount">Monto:</string>


    <string name="asks">Lista de solicitudes abiertas:</string>
    <string name="bids">Lista de ofertas abiertas:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>